@@ -4,7 +4,9 @@
 <!-- ============================================= -->
 <!-- $Header: /cvs/adempiere/serverRoot/build.xml,v 1.4 2006/06/10 21:58:02 jjanke Exp $-->
 
-<project name="adempiereRoot" default="main" basedir=".">
+<project name="adempiereRoot" default="main" basedir="."
+  xmlns:if="ant:if"
+  xmlns:unless="ant:unless">
 
   <!--<property environment="env"/>-->
   <import file="../utils_dev/properties.xml"/>
@@ -24,6 +26,12 @@
   <property name="build.classes.dir" value="${build.dir}/classes"/>
   <property name="build.war.dir" value="${build.dir}/war"/>
 
+  <property name="test.src" value="${src.dir}/test/"/>
+  <property name="test.build.dir" value="test/build"/>
+  <property name="test.results.dir" value="test/test_results"/>
+  <property name="base.test.build.dir" value="../base/test/build"/>
+
+  
   <target name="adempiereRootInit">
     <echo message="=========== Build Server Root"/>
   </target>
@@ -32,15 +40,16 @@
   <path id="base.path">
     <pathelement location="../lib/Adempiere.jar" />
     <pathelement location="../lib/CSTools.jar" />
-    <pathelement location="../tools/lib/j2ee.jar" />
 	<pathelement location="../tools/lib/jnlp.jar" />
-	<pathelement location="../tools/lib/servlet-api.jar" />
+    <pathelement location="../tools/lib/ejb-api-3.0.jar" />
+    <pathelement location="../tools/lib/javax.servlet-api-4.0.1.jar"/>
+	<pathelement location="../tools/lib/javax.annotation-api-1.3.2.jar"/>
+    <pathelement location="../tools/lib/javax.jms-api-2.0.1.jar"/>
 	<pathelement location="../tools/lib/mail.jar" />
 	<pathelement location="../tools/lib/bsh-1.3.0.jar" />
 	<pathelement location="../tools/lib/junit.jar" />
   	<pathelement location="../tools/lib/cron4j-2.2.1.jar" />
 	<pathelement location="../lib/oracle.jar" />
-	<pathelement location="../lib/jboss.jar" />
 	<pathelement location="../lib/postgresql.jar" />
 	<pathelement location="../tools/lib/mysql-connector-java-5.1.13-bin.jar" />
     <pathelement location="${build.classes.dir}" />
@@ -51,8 +60,8 @@
   <!-- Copy JBoss specific deployment descriptor     					   -->
   <!-- =================================================================== -->
   <target name="adempiereRootXml" depends="adempiereRootInit">
-  	<copyfile dest="${build.dir}/META-INF/jboss.xml" src="${src.ejb.dir}/jboss.xml"/>
-  	<copyfile dest="${build.dir}/META-INF/sun-ejb-jar.xml" src="${src.ejb.dir}/sun-ejb-jar.xml"/>
+  	<copy file="${src.ejb.dir}/jboss.xml" todir="${build.dir}/META-INF"/>
+  	<copy file="${src.ejb.dir}/sun-ejb-jar.xml" todir="${build.dir}/META-INF"/>
   </target>
 
 
@@ -64,15 +73,17 @@
 
     <!--	Compile all -->
     <javac
-      target="1.8" encoding="UTF-8"
+      target="11" encoding="UTF-8"
 	  destdir="${build.classes.dir}"
 	  debug="on"
 	  deprecation="off"
 	  optimize="on"
-      classpathref="base.path">
+				classpathref="base.path"
+				includeantruntime="false">
       <src path="${src.ejb.dir}"/>
       <src path="${src.servlet.dir}"/>
       <src path="${src.server.dir}"/>
+      <compilerarg line="--add-exports java.naming/com.sun.jndi.ldap=ALL-UNNAMED"/>
     </javac>
 
   </target>
@@ -81,7 +92,7 @@
   <!-- =========================================== -->
   <!-- Creates the jar archives                    -->
   <!-- =========================================== -->
-  <target name="adempiereRootJar" depends="adempiereRootCompile">
+  <target name="adempiereRootJar" depends="adempiereRootCompile, integration-tests">
     <mkdir dir="${build.deploy.dir}"/>
 
     <!--	Jar -->
@@ -136,7 +147,8 @@
   <!-- =========================================== -->
   <!-- Deploy Server Files		                   -->
   <!-- =========================================== -->
-  <target name="adempiereRootDeployServer" depends="adempiereRootJar,adempiereRootWar,adempiereRootCompile">
+  <target name="adempiereRootDeployServer" depends="adempiereRootJar,adempiereRootWar,
+    adempiereRootCompile,integration-tests">
 	<copy todir="../lib">
 		<fileset dir="${build.deploy.dir}"/>
 	</copy>
@@ -160,6 +172,109 @@
     <delete file="../lib/adempiereRootBase.war"/>
     <delete file="../lib/adempiereRoot.jar"/>
     <delete file="../lib/adempiereRoot.xml"/>
+  </target>
+
+  <!-- =========================================== -->
+  <!-- Tests                                       -->
+  <!-- =========================================== -->
+
+  <path id="test.class.path">
+    <pathelement location="${build.classes.dir}"/>
+    <pathelement path="${classpath}"/>
+    <pathelement path="../serverRoot/build"/>
+    <fileset dir="../lib" includes="*.jar"/>
+    <fileset dir="../tools/lib" includes="**/*.jar"/>
+    <pathelement path="${adempiere.source}/base/Base.jar"/>
+    <pathelement location="${build.deploy.dir}/adempiereRoot.jar" />
+    <pathelement location="${test.build.dir}"/>
+    <pathelement location="${test.results.dir}"/>
+    <pathelement location="${base.test.build.dir}"/>
+    <pathelement path="${project.class.path}"/> 
+    <fileset dir="../tools/lib/junit" includes="**/*.jar"/>
+  </path>
+  
+  <target name="check.tests">
+    <condition property="unitTests.run">
+        <and>
+            <istrue value="${test.performTests}"/>
+            <istrue value="${test.performUnitTests}"/>
+        </and>
+    </condition>
+    <condition property="integrationTests.run">
+        <and>
+            <istrue value="${test.performTests}"/>
+            <istrue value="${test.performIntegrationTests}"/>
+        </and>
+    </condition>
+  </target>
+    
+  <target name="alertIfTestSkipped" depends="check.tests" unless="${test.performTests}">
+    <echo message="Tests will not be performed. See adempiere/utils_dev/test.properties."/>     
+  </target>
+    
+  <target name="clean.tests" depends="alertIfTestSkipped" if="${test.performTests}">
+    <delete dir="${test.build.dir}"/>
+    <delete dir="${test.results.dir}"/>
+  </target>
+
+  <target name="compile.test" depends="adempiereRootCompile, clean.tests"
+        if="${test.performTests}">
+    <mkdir dir="${test.build.dir}"/>
+    <javac target="11" encoding="UTF-8" fork="true" includeantruntime="false"
+        destdir="${test.build.dir}" deprecation="on" debug="on" 
+        memoryinitialsize="512m" memorymaximumsize="512m">
+      <src path="${test.src}"/>
+      <classpath refid="test.class.path"/>
+    </javac>        
+  </target>
+    
+  <target name="alertIfUnitTestSkipped" depends="check.tests" unless="unitTests.run">
+    <echo if:true="${test.performTests}">
+"===> Unit tests will not be performed. See adempiere/utils_dev/test.properties."</echo>
+  </target>
+
+  <target name="alertIfIntegrationTestSkipped" depends="check.tests" 
+        unless="integrationTests.run">
+    <echo if:true="${test.performTests}">
+"===> Integration tests will not be performed. See adempiere/utils_dev/test.properties."</echo> 
+  </target>
+    
+  <target name="unit-tests" depends="compile.test, alertIfUnitTestSkipped" if="unitTests.run">
+    <mkdir dir="../serverRoot/${test.results.dir}"/>       
+    <junitlauncher 
+        printsummary="false" 
+        haltonfailure="no" 
+        failureproperty="test.failed"
+        excludeTags="IntegrationTest">
+      <classpath refid="test.class.path"/>
+      <testclasses outputdir="${adempiere.base}/serverRoot/${test.results.dir}">
+        <fileset dir="${test.build.dir}"/>
+        <listener type="legacy-xml" sendSysErr="true" sendSysOut="true"/>
+        <listener classname="org.adempiere.test.AdempiereTestExecutionListener"
+            sendSysErr="true" sendSysOut="true"/>
+        <fork/>
+      </testclasses>
+    </junitlauncher>
+  </target>
+    
+  <target name="integration-tests" depends="unit-tests, alertIfIntegrationTestSkipped" 
+        if="integrationTests.run">
+    <mkdir dir="../serverRoot/${test.results.dir}"/>       
+    <junitlauncher 
+        printsummary="false" 
+        haltonfailure="yes" 
+        failureproperty="test.failed"
+        excludeTags="UnitTest">
+      <classpath refid="test.class.path"/>
+      <testclasses outputdir="${adempiere.base}/serverRoot/${test.results.dir}">
+        <fileset dir="${test.build.dir}"/>
+        <listener type="legacy-xml" sendSysErr="true" sendSysOut="true"/>
+        <listener type="legacy-brief" sendSysErr="true" sendSysOut="true"/>
+        <listener classname="org.adempiere.test.AdempiereTestExecutionListener"
+            sendSysErr="true" sendSysOut="true"/>
+        <fork/>
+      </testclasses>            
+    </junitlauncher>
   </target>
 
 </project>
